# alenka-distributed

./: .gitmodules  AUTHORS  NEWS  README  README.md  autogen.sh  cleanup.sh  configure.ac
config/: sample.cfg
src/: Makefile.am  alenka-distributed.cpp  clog.cpp  common.h  config.cpp  config.h  daemon.h  watcher.h  zookeeper.cpp  zookeeper.h
src/master-cpp/: master-main.cpp  master.cpp  master.h
src/worker-cpp/: worker-main.cpp  worker.cpp  worker.h  worker_main.cpp
